--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -1,11 +1,38 @@
+# Manually deploy the CDK Stack defined by the main branch of the repo
+
 name: AWS Manual CDK Deploy
 
 on:
-  workflow_dispatch:
+  push:  # temporary. final version should only run on workflow dispatch
+    branches:
+      - actions_cd
+  # workflow_dispatch:
 
 jobs:
-  actions_test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Test Manual Deploy
-        run: echo "Test of Manual CDK Deploy"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with: 
+          node-version: "16"
+      - name: Install Python dependencies and CDK
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements
+          npm install -g aws-cdk
+      # using an AWS access key stored in GitHub secrets
+      # given more time, using GitHub OIDC and AWS identity provider would be better
+      - name: Configure AWS credentials
+                uses: aws-actions/configure-aws-credentials@master
+                with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+                  aws-region: "us-east-1"
+      - name: Deploy to AWS
+          run: cdk deploy --app="python3 ${PWD}/app.py" --require-approval=never
+          
