--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -28,7 +28,7 @@ jobs:
       # using an AWS access key stored in GitHub secrets
       # given more time, using GitHub OIDC and AWS identity provider would be better
       - name: Configure AWS credentials
-                uses: aws-actions/configure-aws-credentials@master
+                uses: aws-actions/configure-aws-credentials@v4
                 with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
