--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements
+          pip install -r ${PWD}/requirements.txt
           npm install -g aws-cdk
       # using an AWS access key stored in GitHub secrets
       # given more time, using GitHub OIDC and AWS identity provider would be better
