--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -23,16 +23,14 @@ jobs:
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
-          pip install -r ${PWD}/requirements.txt
+          pip install -r requirements.txt
           npm install -g aws-cdk
       # using an AWS access key stored in GitHub secrets
       # given more time, using GitHub OIDC and AWS identity provider would be better
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: "us-east-1"
-      - name: Deploy to AWS
-        run: cdk deploy --app="python3 ${PWD}/app.py" --require-approval=never
+      - name: Deploy CDK Stack
+        run: cdk deploy PointlessAnalogiesStack --require-approval never
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
           
