--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -22,8 +23,6 @@ jobs:
           node-version: "16"
       - name: Install Python dependencies and CDK
         run: |
-          pwd
-          ls
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           npm install -g aws-cdk
