--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -8,9 +8,16 @@ on:
       - actions_cd
   # workflow_dispatch:
 
+# permissions for AWS credential
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the JWT
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -26,14 +33,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           npm install -g aws-cdk
-      # using an AWS access key stored in GitHub secrets
-      # given more time, using GitHub OIDC and AWS identity provider would be better
       - name: Deploy CDK Stack
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-          CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
-          CDK_DEFAULT_REGION: us-east-1
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          managed-session-policies: arn:aws:iam::aws:policy/AdministratorAccess
+        # env:
+        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #   AWS_DEFAULT_REGION: us-east-1
+        #   CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
+        #   CDK_DEFAULT_REGION: us-east-1
         run: cdk deploy PointlessAnalogiesStack --require-approval never --verbose
           
