testing actions, add region to aws-credentials

--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -36,6 +36,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
+          audience: sts.amazonaws.com.cn
+          aws-region: us-east-1
           managed-session-policies: arn:aws:iam::aws:policy/AdministratorAccess
       - name: Deploy CDK Stack
         # env:
