--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -8,37 +8,33 @@ on:
       - actions_cd
   # workflow_dispatch:
 
-# permissions for AWS credential
-permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
-
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       id-token: write # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with: 
-          node-version: "22"
+          node-version: "20.x"
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           npm install -g aws-cdk
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          audience: sts.amazonaws.com.cn
-          aws-region: us-east-1
-          managed-session-policies: arn:aws:iam::aws:policy/AdministratorAccess
+      - name: Bootstrap CDK
+        run: cdk bootstrap
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Deploy CDK Stack
         # env:
         #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -47,4 +43,7 @@ jobs:
         #   CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
         #   CDK_DEFAULT_REGION: us-east-1
         run: cdk deploy PointlessAnalogiesStack --require-approval never --verbose
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           
