--- a/.github/workflows/manual_cdk_deploy.yaml
+++ b/.github/workflows/manual_cdk_deploy.yaml
@@ -3,10 +3,7 @@
 name: AWS Manual CDK Deploy
 
 on:
-  push:  # temporary. final version should only run on workflow dispatch
-    branches:
-      - actions_cd
-  # workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -36,13 +33,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
       - name: Deploy CDK Stack
-        # env:
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        #   AWS_DEFAULT_REGION: us-east-1
-        #   CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
-        #   CDK_DEFAULT_REGION: us-east-1
-        run: cdk deploy PointlessAnalogiesStack --require-approval never --verbose
+        run: cdk deploy PointlessAnalogiesStack --require-approval never
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
