--- a/.github/workflows/continuous_deployment.yaml
+++ b/.github/workflows/continuous_deployment.yaml
@@ -14,9 +14,51 @@ on:
 run-name: "Continuous Deployment (@${{ github.actor }})"
 
 jobs:
-  test_cd:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
     steps:
-      - name: Test CD
-        run: echo "Test of Continuous Deployment"
-
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with: 
+          node-version: "20.x"
+      - name: Install Python dependencies and CDK
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          npm install -g aws-cdk
+      - name: Install AWS CLI
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+      - name: Check if stack is deployed
+        id: check_stack
+        run: |
+          STACK_NAME="PointlessAnalogiesStack"
+          if ! aws cloudformation describe-stacks --stack-name $STACK_NAME; then
+            echo "Stack $STACK_NAME does not exist. Exiting."
+            exit 0
+          fi
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+      - name: Bootstrap CDK
+        run: cdk bootstrap
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      - name: Deploy CDK Stack
+        run: cdk deploy PointlessAnalogiesStack --require-approval never
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
